--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,24 +1,28 @@
 <nav class="navbar">
+  <a href="../HTML/landing.php">
     <img
-        src="../IMG/judul.png"
-        alt="Judul"
-        class="navbar-logo"
-        href="#judul"
-        id="judul"
+      src="../IMG/judul.png"
+      alt="Judul"
+      class="navbar-logo"
+      href="../HTML/landing.php"
+      id="judul"
     />
-    <div class="navbar-nav">
-        <a href="#genre"> GENRE </a>
-        <a href="#populer"> POPULER </a>
-    </div>
+  </a>
+  <div class="navbar-search">
+    <form action="/search" method="get">
+      <input type="text" name="q" placeholder="Cari..." />
+      <button type="submit"><i data-feather="search"></i></button>
+    </form>
+  </div>
 
-    <div class="navbar-extra">
-        <a href="#toggle" class="button" id="toggle-button"
-            ><i data-feather="toggle-left"></i
-        ></a>
-        <a href="login.html" class="button"> Sign-In </a>
-        <a href="signup.html" class="button"> Sign-Up </a>
-        <a href="#" id="hambuger-menu"
-            ><i data-feather="menu" class="humbuger"></i
-        ></a>
-    </div>
+  <div class="navbar-extra">
+    <a href="#toggle" class="button" id="toggle-button"
+      ><i data-feather="toggle-left"></i
+    ></a>
+    <a href="login.html" class="button"> Log-In </a>
+    <a href="signup.html" class="button"> Sign-Up </a>
+    <a href="#" id="hambuger-menu"
+      ><i data-feather="menu" class="humbuger"></i
+    ></a>
+  </div>
 </nav>
